@@ -7,9 +7,10 @@ module Webrat
     include Sinatra::Test::Methods
 
     %w(get head post put delete).each do |verb|
-      define_method(verb) do |*args|
-        url, data, headers = *args
-        self.__send__("#{verb}_it", url, data)
+      define_method(verb) do |*args| # (path, data, headers = nil)
+        path, data, headers = *args
+        params = data.merge({:env => headers || {}})
+        self.__send__("#{verb}_it", path, params)
         follow! while @response.redirect?
       end
     end
